# website

./: Cargo.toml  README.md  start.sh
src/: main.rs
static/src/css/: index.css
templates/: header.html  index.html.tera  index.php  legalpage.html.tera
